# edison-src

./: .gitignore  README.md
arduino/clloader/: Makefile  Readme.txt  clloader.c  clloader.h
arduino/clloader/galileo-reset/: galileo-reset.c  galileo-reset.h
arduino/clloader/scripts/: launcher.sh  sketch_reset.sh
broadcom_cws/bluetooth/firmware/: BCM43341B0_002.001.014.0122.0159.hcd  BCM43341B0_002.001.014.0122.0159_5_M8dBm_TestOnly.hcd  BCM43341B0_002.001.014.0123.0168.hcd
broadcom_cws/wlan/driver_bcm43x/: Makefile  wl_cfg80211.c
broadcom_cws/wlan/firmware/: fw_bcmdhd.bin_4334x_b0  fw_bcmdhd_mfg.bin_4334x_b0
device-software/: setup.sh
device-software/utils/: 0001-kernel-kernel-yocto-fix-external-src-builds-when-S-B-poky-dora.patch  create_devtools_package.sh  fix-gcc49-binutils.patch  fix-sshd-varloglastlog-warning.patch  gcc-Clean-up-configure_prepend-and-fix-for-mingw.patch  invalidate_sstate.sh  sdk-populate-clean-broken-links.patch
device-software/utils/flash/: flashall.bat  flashall.sh  postBuild.sh
mw/iecf-c/: .jshintrc  .project
mw/iecf-c/releases/: README.txt
mw/iecf-c/src/: CMakeLists.txt
mw/iecf-c/src/examples/: .cproject  .project  CMakeLists.txt  examples.md
mw/iecf-c/src/examples/distributed-thermostat/: CMakeLists.txt  dashboard.c  distributed-thermostat.md  temperatureSensor.c  thermostat.c
mw/iecf-c/src/examples/iotkit-apps/: CMakeLists.txt  iotkit-publisher.c  iotkit-subscriber.c
mw/iecf-c/src/examples/mqtt-apps/: CMakeLists.txt  publisher.c  subscriber.c
mw/iecf-c/src/examples/serviceQueries/: temperature-sensor-query.json  temperatureServiceQueryMQTT.json  temperatureServiceQueryZMQPUBSUB.json  temperatureServiceQueryZMQREQREP.json  thermostat-query.json
mw/iecf-c/src/examples/serviceSpecs/: temperature-sensor-spec.json  temperatureServiceIoTKit.json  temperatureServiceMQTT.json  temperatureServiceZMQPUBSUB.json  temperatureServiceZMQREQREP.json  thermostat-spec.json
mw/iecf-c/src/examples/zmq-apps/: CMakeLists.txt  sample_zmqpubsub-client.c  sample_zmqpubsub-service.c  sample_zmqreqrep-client.c  sample_zmqreqrep-service.c
mw/iecf-c/src/lib/: CMakeLists.txt
mw/iecf-c/src/lib/cJSON/: cJSON.c  cJSON.h
mw/iecf-c/src/lib/libiotkit-comm/: CMakeLists.txt  config.json  iotkit-comm.c  iotkit-comm.h  iotkit-comm_mdns.c  iotkit-comm_mdns.h  libiotkit-comm.md  util.h
mw/iecf-c/src/lib/libiotkit-comm/plugin-interfaces/: client-interface.json  interface-for-interfaces.json  iotkit-agent-client-interface.json  service-interface.json
mw/iecf-c/src/lib/plugins/: CMakeLists.txt
mw/iecf-c/src/lib/plugins/inc/: common.h
mw/iecf-c/src/lib/plugins/libiotkitpubsub/: CMakeLists.txt  iotkit-agent-client.c  iotkit-agent-client.h  iotkitpubsub.md
mw/iecf-c/src/lib/plugins/libmqttpubsub/: CMakeLists.txt  mqtt-client.c  mqtt-client.h  mqttpubsub.md
mw/iecf-c/src/lib/plugins/libzmqpubsub/: CMakeLists.txt  zmqpubsub-client.c  zmqpubsub-client.h  zmqpubsub-service.c  zmqpubsub-service.h  zmqpubsub.md
mw/iecf-c/src/lib/plugins/libzmqreqrep/: CMakeLists.txt  zmqreqrep-client.c  zmqreqrep-client.h  zmqreqrep-service.c  zmqreqrep-service.h  zmqreqrep.md
mw/iecf-c/src/tests/: CMakeLists.txt
mw/iecf-c/src/tests/iotkitpubsub/: CMakeLists.txt  test_iotkitpubsub_client_connect_success.c  test_iotkitpubsub_client_publish_fail.c  test_iotkitpubsub_client_publish_success.c
mw/iecf-c/src/tests/libiotkit-comm/: CMakeLists.txt  invalid-iotkit-comm-service-interface.json  invalidconfig.json  invalidtemperatureServiceMQTT.json  invalidtemperatureServiceQueryMQTT.json  invalidtemperatureServiceZMQPUBSUB.json  iotkit-comm-client-interface.json  temperatureServiceMQTT.json  temperatureServiceQueryMQTT.json  temperatureServiceQueryZMQPUBSUB.json  temperatureServiceZMQPUBSUB.json  test_iotkit-comm_createclient_fail.c  test_iotkit-comm_createclient_success.c  test_iotkit-comm_createservice_fail.c  test_iotkit-comm_createservice_success.c  test_iotkit-comm_loadcomminterfaces_fail.c  test_iotkit-comm_loadcomminterfaces_success.c  test_iotkit-comm_loadcommplugin_fail.c  test_iotkit-comm_loadcommplugin_success.c  test_iotkit-comm_parseconfigfile_fail.c  test_iotkit-comm_parseconfigfile_success.c  test_iotkit-comm_parseplugininterfaces_fail.c  test_iotkit-comm_parseplugininterfaces_success.c  test_mdns_advertiseservice_fail.c  test_mdns_advertiseservice_success.c  test_mdns_createclientforservice_fail.c  test_mdns_createclientforservice_success.c  test_mdns_discoverservice_fail.c  test_mdns_discoverservice_success.c  test_mdns_getaddressinfo_pass.c  test_mdns_parse_servicedesc_fail.c  test_mdns_parse_servicedesc_success.c  test_mdns_parse_servicequery_fail.c  test_mdns_parse_servicequery_success.c
mw/iecf-c/src/tests/mqttpubsub/: CMakeLists.txt  test_mqttpubsub_client_connect_success.c  test_mqttpubsub_client_publish_fail.c  test_mqttpubsub_client_publish_success.c  test_mqttpubsub_client_subscribe_fail.c  test_mqttpubsub_client_subscribe_success.c  test_mqttpubsub_client_unsubscribe_success.c
mw/iecf-c/src/tests/zmqpubsub/: CMakeLists.txt  test_zmqpubsub_client_receive_fail.c  test_zmqpubsub_client_socket_connect_fail.c  test_zmqpubsub_client_socket_connect_success.c  test_zmqpubsub_client_subscribe_fail.c  test_zmqpubsub_client_subscribe_success.c  test_zmqpubsub_client_unsubscribe_fail.c  test_zmqpubsub_client_unsubscribe_success.c  test_zmqpubsub_service_publish_fail.c  test_zmqpubsub_service_socket_connect_fail.c  test_zmqpubsub_service_socket_connect_success.c
mw/iecf-c/src/tests/zmqreqrep/: CMakeLists.txt  test_zmqreqrep_rep_receive_fail.c  test_zmqreqrep_rep_receive_success.c  test_zmqreqrep_rep_sendTo_fail.c  test_zmqreqrep_rep_sendTo_success.c  test_zmqreqrep_rep_socket_connect_fail.c  test_zmqreqrep_rep_socket_connect_success.c  test_zmqreqrep_req_receive_fail.c  test_zmqreqrep_req_send_fail.c  test_zmqreqrep_req_send_success.c  test_zmqreqrep_req_socket_connect_fail.c  test_zmqreqrep_req_socket_connect_success.c
mw/iecf-js/: .npmignore  12commandments.txt  README.md  jsdoc-conf.json  package.json
mw/mqtt/: Makefile
mw/oobe/: package.json
(+165 files in other folders)
