
INCLUDE_DIRECTORIES(
  ../../lib/cJSON
  ../../lib/libiotkit-comm
)

# set the source files list
SET(IOTKIT-COMM_CREATECLIENT_FAIL test_iotkit-comm_createclient_fail.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(IOTKIT-COMM_CREATECLIENT_SUCCESS test_iotkit-comm_createclient_success.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(IOTKIT-COMM_CREATESERVICE_FAIL test_iotkit-comm_createservice_fail.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(IOTKIT-COMM_CREATESERVICE_SUCCESS test_iotkit-comm_createservice_success.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(IOTKIT-COMM_LOADCOMMINTERFACES_FAIL test_iotkit-comm_loadcomminterfaces_fail.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(IOTKIT-COMM_LOADCOMMINTERFACES_SUCCESS test_iotkit-comm_loadcomminterfaces_success.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(IOTKIT-COMM_LOADCOMMPLUGIN_FAIL test_iotkit-comm_loadcommplugin_fail.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(IOTKIT-COMM_LOADCOMMPLUGIN_SUCCESS test_iotkit-comm_loadcommplugin_success.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(IOTKIT-COMM_PARSECONFIGFILE_FAIL test_iotkit-comm_parseconfigfile_fail.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(IOTKIT-COMM_PARSECONFIGFILE_SUCCESS test_iotkit-comm_parseconfigfile_success.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(IOTKIT-COMM_PARSEPLUGININTERFACES_FAIL test_iotkit-comm_parseplugininterfaces_fail.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(IOTKIT-COMM_PARSEPLUGININTERFACES_SUCCESS test_iotkit-comm_parseplugininterfaces_success.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(MDNS_ADVERTISESERVICE_FAIL test_mdns_advertiseservice_fail.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(MDNS_ADVERTISESERVICE_SUCCESS test_mdns_advertiseservice_success.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(MDNS_CREATECLIENTFORSERVICE_FAIL test_mdns_createclientforservice_fail.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(MDNS_CREATECLIENTFORSERVICE_SUCCESS test_mdns_createclientforservice_success.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(MDNS_DISCOVERSERVICE_FAIL test_mdns_discoverservice_fail.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(MDNS_DISCOVERSERVICE_SUCCESS test_mdns_discoverservice_success.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(MDNS_GETADDRESSINFO_SUCCESS test_mdns_getaddressinfo_pass.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(MDNS_PARSE_SERVICEDESC_FAIL test_mdns_parse_servicedesc_fail.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(MDNS_PARSE_SERVICEDESC_SUCCESS test_mdns_parse_servicedesc_success.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(MDNS_PARSE_SERVICEQUERY_FAIL test_mdns_parse_servicequery_fail.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)
SET(MDNS_PARSE_SERVICEQUERY_SUCCESS test_mdns_parse_servicequery_success.c ../../lib/cJSON/cJSON.c ../../lib/libiotkit-comm/iotkit-comm.c ../../lib/libiotkit-comm/iotkit-comm_mdns.c)

# create the executables
ADD_EXECUTABLE(iotkit-comm_createclient_fail ${IOTKIT-COMM_CREATECLIENT_FAIL})
ADD_EXECUTABLE(iotkit-comm_createclient_success ${IOTKIT-COMM_CREATECLIENT_SUCCESS})
ADD_EXECUTABLE(iotkit-comm_createservice_fail ${IOTKIT-COMM_CREATESERVICE_FAIL})
ADD_EXECUTABLE(iotkit-comm_createservice_success ${IOTKIT-COMM_CREATESERVICE_SUCCESS})
ADD_EXECUTABLE(iotkit-comm_loadcomminterfaces_fail ${IOTKIT-COMM_LOADCOMMINTERFACES_FAIL})
ADD_EXECUTABLE(iotkit-comm_loadcomminterfaces_success ${IOTKIT-COMM_LOADCOMMINTERFACES_SUCCESS})
ADD_EXECUTABLE(iotkit-comm_loadcommplugin_fail ${IOTKIT-COMM_LOADCOMMPLUGIN_FAIL})
ADD_EXECUTABLE(iotkit-comm_loadcommplugin_success ${IOTKIT-COMM_LOADCOMMPLUGIN_SUCCESS})
ADD_EXECUTABLE(iotkit-comm_parseconfigfile_fail ${IOTKIT-COMM_PARSECONFIGFILE_FAIL})
ADD_EXECUTABLE(iotkit-comm_parseconfigfile_success ${IOTKIT-COMM_PARSECONFIGFILE_SUCCESS})
ADD_EXECUTABLE(iotkit-comm_parseplugininterfaces_fail ${IOTKIT-COMM_PARSEPLUGININTERFACES_FAIL})
ADD_EXECUTABLE(iotkit-comm_parseplugininterfaces_success ${IOTKIT-COMM_PARSEPLUGININTERFACES_SUCCESS})
ADD_EXECUTABLE(mdns_advertiseservice_fail ${MDNS_ADVERTISESERVICE_FAIL})
ADD_EXECUTABLE(mdns_advertiseservice_success ${MDNS_ADVERTISESERVICE_SUCCESS})
ADD_EXECUTABLE(mdns_createclientforservice_fail ${MDNS_CREATECLIENTFORSERVICE_FAIL})
ADD_EXECUTABLE(mdns_createclientforservice_success ${MDNS_CREATECLIENTFORSERVICE_SUCCESS})
ADD_EXECUTABLE(mdns_discoverservice_fail ${MDNS_DISCOVERSERVICE_FAIL})
ADD_EXECUTABLE(mdns_discoverservice_success ${MDNS_DISCOVERSERVICE_SUCCESS})
ADD_EXECUTABLE(mdns_getaddressinfo_success ${MDNS_GETADDRESSINFO_SUCCESS})
ADD_EXECUTABLE(mdns_parse_servicedesc_fail ${MDNS_PARSE_SERVICEDESC_FAIL})
ADD_EXECUTABLE(mdns_parse_servicedesc_success ${MDNS_PARSE_SERVICEDESC_SUCCESS})
ADD_EXECUTABLE(mdns_parse_servicequery_fail ${MDNS_PARSE_SERVICEQUERY_FAIL})
ADD_EXECUTABLE(mdns_parse_servicequery_success ${MDNS_PARSE_SERVICEQUERY_SUCCESS})

SET_TARGET_PROPERTIES(iotkit-comm_createclient_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(iotkit-comm_createclient_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(iotkit-comm_createservice_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(iotkit-comm_createservice_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(iotkit-comm_loadcomminterfaces_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(iotkit-comm_loadcomminterfaces_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(iotkit-comm_loadcommplugin_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(iotkit-comm_loadcommplugin_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(iotkit-comm_parseconfigfile_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(iotkit-comm_parseconfigfile_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(iotkit-comm_parseplugininterfaces_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(iotkit-comm_parseplugininterfaces_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_advertiseservice_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_advertiseservice_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_createclientforservice_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_createclientforservice_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_discoverservice_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_discoverservice_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_getaddressinfo_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_parse_servicedesc_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_parse_servicedesc_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_parse_servicequery_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_parse_servicequery_success PROPERTIES LINKER_LANGUAGE C)

# Link the executables
TARGET_LINK_LIBRARIES(iotkit-comm_createclient_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(iotkit-comm_createclient_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(iotkit-comm_createservice_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(iotkit-comm_createservice_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(iotkit-comm_loadcomminterfaces_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(iotkit-comm_loadcomminterfaces_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(iotkit-comm_loadcommplugin_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(iotkit-comm_loadcommplugin_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(iotkit-comm_parseconfigfile_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(iotkit-comm_parseconfigfile_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(iotkit-comm_parseplugininterfaces_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(iotkit-comm_parseplugininterfaces_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_advertiseservice_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_advertiseservice_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_createclientforservice_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_createclientforservice_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_discoverservice_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_discoverservice_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_getaddressinfo_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_parse_servicedesc_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_parse_servicedesc_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_parse_servicequery_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_parse_servicequery_success dns_sd m dl gcov)

# Add the Test
ADD_TEST(iotkit-comm_createclient_fail ${CTEST_BINARY_DIRECTORY}/iotkit-comm_createclient_fail)
ADD_TEST(iotkit-comm_createclient_success ${CTEST_BINARY_DIRECTORY}/iotkit-comm_createclient_success)
ADD_TEST(iotkit-comm_createservice_fail ${CTEST_BINARY_DIRECTORY}/iotkit-comm_createservice_fail)
ADD_TEST(iotkit-comm_createservice_success ${CTEST_BINARY_DIRECTORY}/iotkit-comm_createservice_success)
ADD_TEST(iotkit-comm_loadcomminterfaces_fail ${CTEST_BINARY_DIRECTORY}/iotkit-comm_loadcomminterfaces_fail)
ADD_TEST(iotkit-comm_loadcomminterfaces_success ${CTEST_BINARY_DIRECTORY}/iotkit-comm_loadcomminterfaces_success)
ADD_TEST(iotkit-comm_loadcommplugin_fail ${CTEST_BINARY_DIRECTORY}/iotkit-comm_loadcommplugin_fail)
ADD_TEST(iotkit-comm_loadcommplugin_success ${CTEST_BINARY_DIRECTORY}/iotkit-comm_loadcommplugin_success)
ADD_TEST(iotkit-comm_parseconfigfile_fail ${CTEST_BINARY_DIRECTORY}/iotkit-comm_parseconfigfile_fail)
ADD_TEST(iotkit-comm_parseconfigfile_success ${CTEST_BINARY_DIRECTORY}/iotkit-comm_parseconfigfile_success)
ADD_TEST(iotkit-comm_parseplugininterfaces_fail ${CTEST_BINARY_DIRECTORY}/iotkit-comm_parseplugininterfaces_fail)
ADD_TEST(iotkit-comm_parseplugininterfaces_success ${CTEST_BINARY_DIRECTORY}/iotkit-comm_parseplugininterfaces_success)
ADD_TEST(mdns_advertiseservice_fail ${CTEST_BINARY_DIRECTORY}/mdns_advertiseservice_fail)
ADD_TEST(mdns_advertiseservice_success ${CTEST_BINARY_DIRECTORY}/mdns_advertiseservice_success)
ADD_TEST(mdns_createclientforservice_fail ${CTEST_BINARY_DIRECTORY}/mdns_createclientforservice_fail)
ADD_TEST(mdns_createclientforservice_success ${CTEST_BINARY_DIRECTORY}/mdns_createclientforservice_success)
ADD_TEST(mdns_discoverservice_fail ${CTEST_BINARY_DIRECTORY}/mdns_discoverservice_fail)
ADD_TEST(mdns_discoverservice_success ${CTEST_BINARY_DIRECTORY}/mdns_discoverservice_success)
ADD_TEST(mdns_getaddressinfo_success ${CTEST_BINARY_DIRECTORY}/mdns_getaddressinfo_success)
ADD_TEST(mdns_parse_servicedesc_fail ${CTEST_BINARY_DIRECTORY}/mdns_parse_servicedesc_fail)
ADD_TEST(mdns_parse_servicedesc_success ${CTEST_BINARY_DIRECTORY}/mdns_parse_servicedesc_success)
ADD_TEST(mdns_parse_servicequery_fail ${CTEST_BINARY_DIRECTORY}/mdns_parse_servicequery_fail)
ADD_TEST(mdns_parse_servicequery_success ${CTEST_BINARY_DIRECTORY}/mdns_parse_servicequery_success)
